--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2">
                     <h1 class="text-2xl md:text-5xl font-bold text-gray-800 mb-4">Hi, Welcome to My Portfolio</h1>
-                    <p class="text-xl text-gray-600 mb-8">A passionate software developer creating beautiful and functional websites.</p>
+                    <p class="text-xl text-gray-600 mb-8">A passionate software engineer creating beautiful and functional websites.</p>
                     <a href="#contact" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Get in Touch</a>
                 </div>
                 <div class="md:w-1/2 mt-12 md:mt-0 ml-0 md:ml-5">
@@ -56,20 +56,12 @@
     <!-- About Section -->
     <section id="about" class="py-12 bg-white">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12">About Me</h2>
-            <div class="grid md:grid-cols-2 gap-8">
+            <h2 class="text-3xl font-bold text-center mb-10">About Me</h2>
+            <div class="grid md:grid-cols-1">
                 <div>
-                    <h3 class="text-xl font-semibold mb-4">My Journey</h3>
-                    <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div>
-                    <h3 class="text-xl font-semibold mb-4">Skills</h3>
-                    <div class="grid grid-cols-2 gap-4">
-                        <div class="bg-gray-100 p-4 rounded">HTML & CSS</div>
-                        <div class="bg-gray-100 p-4 rounded">JavaScript</div>
-                        <div class="bg-gray-100 p-4 rounded">React</div>
-                        <div class="bg-gray-100 p-4 rounded">Tailwind CSS</div>
-                    </div>
+                    <p class="text-xl text-gray-600">Hello! I’m <strong>Nyein Chan Aung</strong>, a passionate and experienced Software Engineer with over 8 years in the tech industry. I specialize in creating cutting-edge web applications and systems that solve real-world problems. I am dedicated to delivering high-quality solutions that meet the needs of my clients and users. Currently, I am a Team Lead at <a href="https://viabells.com" target="_blank" class="text-blue-600 hover:text-blue-800">Viabells</a> in Singapore, where I oversee the development of innovative software solutions.</p>
+                    <p class="text-xl text-gray-600 mt-4">When I’m not coding, I enjoy spending time with my family and diving into the latest tech trends.</p>
+                    <p class="text-xl text-gray-600 mt-4">Let’s connect and build something amazing together!</p>
                 </div>
             </div>
         </div>
@@ -80,31 +72,36 @@
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-center mb-12">My Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Project Card 1 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="https://placehold.co/400x300" alt="Project 1" class="w-full">
+                    <img src="projects/sdax_logo.png" alt="Project 1" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Project 1</h3>
-                        <p class="text-gray-600 mb-4">Description of project 1</p>
-                        <a href="#" class="text-blue-600 hover:text-blue-800">View Project →</a>
+                        <h3 class="text-xl font-semibold mb-2">SDAX</h3>
+                        <p class="text-gray-600 mb-4">A comprehensive digital assets exchange supporting Admin, Investor, and Issuer Portals with high scalability and security.</p>
+                        <a href="https://investor.sdax.co/login" target="_blank" class="text-blue-600 hover:text-blue-800">View Project →</a>
                     </div>
                 </div>
-                <!-- Project Card 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="https://placehold.co/400x300" alt="Project 2" class="w-full">
+                    <img src="projects/pru_logo.png" alt="Project 1" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Project 2</h3>
-                        <p class="text-gray-600 mb-4">Description of project 2</p>
-                        <a href="#" class="text-blue-600 hover:text-blue-800">View Project →</a>
+                        <h3 class="text-xl font-semibold mb-2">Life Goals - Prudential</h3>
+                        <p class="text-gray-600 mb-4">Insurance Calculators integrated with a powerful CRM.</p>
+                        <a href="https://www.prudential.com.mm/en" target="_blank" class="text-blue-600 hover:text-blue-800">View Project →</a>
                     </div>
                 </div>
-                <!-- Project Card 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="https://placehold.co/400x300" alt="Project 3" class="w-full">
+                    <img src="/projects/salesucceed_logo.png" alt="Project 2" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Project 3</h3>
-                        <p class="text-gray-600 mb-4">Description of project 3</p>
-                        <a href="#" class="text-blue-600 hover:text-blue-800">View Project →</a>
+                        <h3 class="text-xl font-semibold mb-2">SaleSucceed</h3>
+                        <p class="text-gray-600 mb-4">A commission-based revenue acceleration platform.</p>
+                        <a href="https://salesucceed.com/" target="_blank" class="text-blue-600 hover:text-blue-800">View Project →</a>
+                    </div>
+                </div>
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="projects/95shop_logo.png" alt="Project 3" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2">95Shop</h3>
+                        <p class="text-gray-600 mb-4">A Full Blown Ecommerce Software.</p>
+                        <a href="https://www.viabells.com/portfolio/95shop" target="_blank" class="text-blue-600 hover:text-blue-800">View Project →</a>
                     </div>
                 </div>
             </div>
@@ -115,22 +112,28 @@
     <section id="contact" class="py-12 bg-white">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-center mb-12">Get in Touch</h2>
-            <div class="max-w-lg mx-auto">
-                <form class="space-y-6">
-                    <div>
-                        <label class="block text-gray-700 mb-2" for="name">Name</label>
-                        <input type="text" id="name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500">
+            <div class="max-w-lg mx-auto text-center">
+                <p class="text-gray-600 mb-8">Feel free to reach out to me through any of these platforms:</p>
+                <div class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-4 md:space-y-0">
+                    <div class="flex items-center justify-center space-x-2">
+                        <svg class="w-6 h-6 text-gray-600" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4.7-8 5.334L4 8.7V6.297l8 5.333 8-5.333V8.7z"/>
+                        </svg>
+                        <a href="mailto:nyeinchanaung.nk@gmail.com" class="text-blue-600 hover:text-blue-800">nyeinchanaung.nk@gmail.com</a>
                     </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2" for="email">Email</label>
-                        <input type="email" id="email" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500">
+                    <div class="flex items-center justify-center space-x-2">
+                        <svg class="w-6 h-6 text-gray-600" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                        </svg>
+                        <a href="https://www.linkedin.com/in/nyein-chan-aung-nca" target="_blank" class="text-blue-600 hover:text-blue-800">LinkedIn</a>
                     </div>
-                    <div>
-                        <label class="block text-gray-700 mb-2" for="message">Message</label>
-                        <textarea id="message" rows="4" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"></textarea>
+                    <div class="flex items-center justify-center space-x-2">
+                        <svg class="w-6 h-6 text-gray-600" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        </svg>
+                        <a href="https://github.com/nyeinchanang" target="_blank" class="text-blue-600 hover:text-blue-800">GitHub</a>
                     </div>
-                    <button type="submit" class="w-full bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Send Message</button>
-                </form>
+                </div>
             </div>
         </div>
     </section>
@@ -139,10 +142,6 @@
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
             <p>&copy; 2025 Nyein Chan Aung. All rights reserved.</p>
-            <div class="mt-4 space-x-4">
-                <a href="https://www.linkedin.com/in/nyein-chan-aung-nca" target="_blank" class="hover:text-gray-300">LinkedIn</a>
-                <a href="https://github.com/nyeinchanang" target="_blank" class="hover:text-gray-300">GitHub</a>
-            </div>
         </div>
     </footer>
 
