--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
     <!-- Projects Section -->
     <section id="projects" class="py-12">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12">My Projects</h2>
+            <h2 class="text-3xl font-bold text-center mb-10">My Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                <!-- <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                     <img src="projects/sdax_logo.png" alt="Project 1" class="w-full">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">SDAX</h3>
                         <p class="text-gray-600 mb-4">A comprehensive digital assets exchange supporting Admin, Investor, and Issuer Portals with high scalability and security.</p>
                         <a href="https://investor.sdax.co/login" target="_blank" class="text-blue-600 hover:text-blue-800">View Project →</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
                     <img src="projects/pru_logo.png" alt="Project 1" class="w-full">
                     <div class="p-6">
@@ -111,7 +111,7 @@
     <!-- Contact Section -->
     <section id="contact" class="py-12 bg-white">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12">Get in Touch</h2>
+            <h2 class="text-3xl font-bold text-center mb-10">Get in Touch</h2>
             <div class="max-w-lg mx-auto text-center">
                 <p class="text-gray-600 mb-8">Feel free to reach out to me through any of these platforms:</p>
                 <div class="flex flex-col md:flex-row items-center justify-center md:space-x-8 space-y-4 md:space-y-0">
