--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <!-- SaleSucceed Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="relative">
-                        <img src="/projects/salesucceed/sale.webp" alt="SaleSucceed" class="w-full h-48 object-cover cursor-pointer" onclick="openGallery('salesucceed')">
+                        <img src="/projects/salesucceed/sale.webp" alt="SaleSucceed" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('salesucceed')">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <a href="https://salesucceed.com/" target="_blank" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -130,7 +130,7 @@
                 <!-- Prudential Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="relative">
-                        <img src="projects/lifegoals/home.png" alt="Prudential" class="w-full h-48 object-cover cursor-pointer" onclick="openGallery('pru')">
+                        <img src="projects/lifegoals/home.png" alt="Prudential" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('lifegoals')">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <button onclick="openGallery('lifegoals')" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -152,7 +152,7 @@
                 <!-- Bestprice Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="relative">
-                        <img src="projects/bestprice/home.png" alt="Bestprice" class="w-full h-48 object-cover cursor-pointer" onclick="openGallery('bestprice')">
+                        <img src="projects/bestprice/home.png" alt="Bestprice" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('bestprice')">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <button onclick="openGallery('bestprice')" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -173,7 +173,7 @@
                 <!-- 95Shop Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="relative">
-                        <img src="projects/95shop/95shop.webp" alt="95Shop" class="w-full h-48 object-cover cursor-pointer" onclick="openGallery('shop95')">
+                        <img src="projects/95shop/95shop.webp" alt="95Shop" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('shop95')">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <a href="https://www.viabells.com/portfolio/95shop" target="_blank" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -253,7 +253,15 @@
         const galleries = {
             lifegoals: [
                 'projects/lifegoals/home.png',
-                'projects/lifegoals/home.png'
+                'projects/lifegoals/product.png',
+                'projects/lifegoals/tools.png',
+                'projects/lifegoals/cal_home.png',
+                'projects/lifegoals/health.png',
+                'projects/lifegoals/saver.png',
+                'projects/lifegoals/leads.png',
+                'projects/lifegoals/chart.png',
+                'projects/lifegoals/survey.gif',
+                'projects/lifegoals/nps_db.png'
             ],
             bestprice: [
                 'projects/bestprice/home.png',
