Added new project

--- a/index.html
+++ b/index.html
@@ -148,6 +148,28 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- PRUShoppe Project Card -->
+                <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
+                    <div class="relative">
+                        <img src="projects/prushoppe/cover.png" alt="Prudential" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('prushoppe')">
+                        <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                            <button onclick="openGallery('prushoppe')" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
+                                Visit Website
+                            </button>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-3">PRUShoppe</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">E-commerce web application for insurance sales.</p>
+                        <div class="flex flex-wrap gap-2 pt-4 border-t border-gray-100 dark:border-gray-700">
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Laravel</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Next.js</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Node.js</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">MySQL</span>
+                        </div>
+                    </div>
+                </div>
                 
                 <!-- Bestprice Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
@@ -273,10 +295,13 @@
                 'projects/bestprice/login.png',
                 'projects/bestprice/favourite.png',
             ],
-            salesucceed: [
-                'projects/salesucceed/image1.jpg',
-                'projects/salesucceed/image2.jpg',
-                'projects/salesucceed/image3.jpg'
+            prushoppe: [
+                'projects/prushoppe/home.png',
+                'projects/prushoppe/products.png',
+                'projects/prushoppe/product.png',
+                'projects/prushoppe/cart.png',
+                'projects/prushoppe/signup.png',
+                'projects/prushoppe/checkout.png'
             ],
             shop95: [
                 'projects/95shop/image1.jpg',
