--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <p class="text-gray-600 dark:text-gray-300 mb-4">Price comparison e-commerce web application.</p>
                         <div class="flex flex-wrap gap-2 pt-4 border-t border-gray-100 dark:border-gray-700">
                             <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Laravel</span>
-                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Vue.js</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Next.js</span>
                             <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">MySQL</span>
                         </div>
                     </div>
