--- a/index.html
+++ b/index.html
@@ -133,10 +133,32 @@
             <h2 class="text-3xl font-bold text-center mb-10 text-gray-800 dark:text-white fade-in-section">My Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
+                <!-- Investment Platform Project Card -->
+                <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section">
+                    <div class="relative">
+                        <img src="/projects/investment/cover.png" alt="SaleSucceed" class="w-full h-64 object-cover cursor-pointer">
+                        <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                            <a href="#" target="_blank" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
+                                Visit Website
+                            </a>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-3">Investment Platform</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">A scalable and secure investment platform supporting Admin, Investor, and Issuer.</p>
+                        <div class="flex flex-wrap gap-2 pt-4 border-t border-gray-100 dark:border-gray-700">
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Next.js</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Node.js</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">MongoDB</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Microservices</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- SaleSucceed Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section">
                     <div class="relative">
-                        <img src="/projects/salesucceed/sale.webp" alt="SaleSucceed" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('salesucceed')">
+                        <img src="/projects/salesucceed/sale.webp" alt="SaleSucceed" class="w-full h-64 object-cover cursor-pointer">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <a href="https://salesucceed.com/" target="_blank" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -158,7 +180,7 @@
                 <!-- Prudential Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section delay-200">
                     <div class="relative">
-                        <img src="projects/lifegoals/home.png" alt="Prudential" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('lifegoals')">
+                        <img src="projects/lifegoals/home.png" alt="Prudential" class="w-full h-64 object-cover cursor-pointer">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <button onclick="openGallery('lifegoals')" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -180,7 +202,7 @@
                 <!-- PRUShoppe Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section delay-400">
                     <div class="relative">
-                        <img src="projects/prushoppe/cover.png" alt="Prudential" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('prushoppe')">
+                        <img src="projects/prushoppe/cover.png" alt="Prudential" class="w-full h-64 object-cover cursor-pointer">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <button onclick="openGallery('prushoppe')" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -202,7 +224,7 @@
                 <!-- Bestprice Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section">
                     <div class="relative">
-                        <img src="projects/bestprice/home.png" alt="Bestprice" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('bestprice')">
+                        <img src="projects/bestprice/home.png" alt="Bestprice" class="w-full h-64 object-cover cursor-pointer">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <button onclick="openGallery('bestprice')" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
@@ -223,7 +245,7 @@
                 <!-- 95Shop Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section">
                     <div class="relative">
-                        <img src="projects/95shop/95shop.webp" alt="95Shop" class="w-full h-64 object-cover cursor-pointer" onclick="openGallery('shop95')">
+                        <img src="projects/95shop/95shop.webp" alt="95Shop" class="w-full h-64 object-cover cursor-pointer">
                         <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                             <a href="https://www.viabells.com/portfolio/95shop" target="_blank" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
                                 Visit Website
