--- a/index.html
+++ b/index.html
@@ -242,6 +242,27 @@
                     </div>
                 </div>
 
+                <!-- SmartPay Project Card -->
+                <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section">
+                    <div class="relative">
+                        <img src="/projects/smartpay/home.png" alt="SmartPay" class="w-full h-64 object-cover cursor-pointer">
+                        <div class="absolute inset-0 bg-black bg-opacity-40 opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
+                            <a href="https://smartpay-omega.vercel.app/" target="_blank" class="bg-white text-gray-800 px-4 py-2 rounded-lg font-semibold transform hover:scale-105 transition duration-200">
+                                Visit Website
+                            </a>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-3">SmartPay</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">A payment processing platform allowing users to make secure and fast online payments.</p>
+                        <div class="flex flex-wrap gap-2 pt-4 border-t border-gray-100 dark:border-gray-700">
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">Laravel</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">React.js</span>
+                            <span class="px-2 py-1 bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 rounded-md text-sm">MySQL</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- 95Shop Project Card -->
                 <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl fade-in-section">
                     <div class="relative">
